--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .principal{
-    background-color: black;
-    padding-top: 0%;
+    background-color: black;;
 }
+
 .titulo{
     text-align: center;
     color: greenyellow;
