--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .principal{
-    background-color: black;
+    background-image: linear-gradient(135deg, #95e495 0, #96e196 7,18%, #89cc89 14,36%, #71c571 28,62%)
     color: #9acd32;
     font-family: Arial, sans-serif;
     margin: 0;
