--- a/style.css
+++ b/style.css
@@ -1,21 +1,27 @@
-body {
-    background: linear-gradient(to bottom, lightgreen, darkgreen);
-    color: white;
+body{
+    background-color: black;
+    color: #9acd32; /* esta é a cor verde amarelado */
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
-.header {
-    text-align: center;
-    padding: 20px;
-}
-.button {
-    display: inline-block;
-    background-color: lightgreen;
-    color: black;
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px 20px;
-    margin: 10px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
+    background-color: #333;
 }
-.button:hover {
-    background-color: darkgreen;
+.titulo h1{
+    margin: 0;
+}
+.botoes button {
+    background-color: #444; /*cor de fundo do botão */
+    color: #94cd32; /* cor de texto do botão */
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+.botoes button:hover {
+    background-color: #555; / cor de fundo do botão ao passar o mouse */
 }
