--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-image: linear-gradient(45deg #00ff00 0%, #008000 100%);
     color: #9acd32; /* esta é a cor verde amarelado */
     font-family: Arial, sans=serif;
     margin: 0;
