--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(to top right, #00ff00 14.29%, #008000 85.71%);
+    background-image: linear-gradient(to top right, black, white);
     font-family: Arial, sans=serif;
     margin: 0;
     padding: 0;
