--- a/style.css
+++ b/style.css
@@ -1,6 +1,27 @@
 body{
-    background-image: linear-gradient(to top right, black, white);
-    font-family: Arial, sans=serif;
+    background-color: black;
+    color: #9acd32; /*esta é a cor verde amarelado =*/
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #333; /*cor de fundo do cabeçalho*/
+}
+.titulo h1{
+    margin: 0;
+}
+.botoes button{
+    background-color: #444; /*cor de fundo do botão*/
+    color: #9acd32; /*cor de texto do botão*/
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+.botoes button:hover{
+    background-color: #555; /*cor de fundo do botão ao passar o mouse*/
 }
