--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-image: linear-gradient(45deg, blue, red);
     color: #9acd32;
     margin: 0;
     padding: 0;
