--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(to top right, black, white);
+    background-image: linear-gradient(to top right, green, yellow);
     color: #9acd32;
     margin: 0;
     padding: 0;
