--- a/wender.css
+++ b/wender.css
@@ -28,7 +28,7 @@
 </section>
 
 <section id="boldo">
-    <h1>BOLDO =</h1>
+    <h1>BOLDO</h1>
     <p>O mais recomendado é que ela receba várias horas de luz solar, pois o boldo necessita de uma boa luz solar.
         OBS : A planta exige melhor desenvolvimento em regiões com alta temperatura E NÃO TOLERA FRIO EXTREMO.
     </p>
