--- a/wender.css
+++ b/wender.css
@@ -35,7 +35,7 @@
 </section>
 
 <section id="pimenta">
-    <h1>PIMENTA =</h1>
+    <h1>PIMENTA</h1>
     <p>Essa planta necessita de uma luz solar intensa para conseguir se desenvolver, por isso coloque ela em um local
         com bastante luz solar </p>
 </section>
