--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: white;
     color: #9acd32;
     margin: 0;
     padding: 0;
@@ -9,18 +9,18 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #333; /*cor de fundo do cabeçalho*/
+    background-color: black; /*cor de fundo do cabeçalho*/
 }
 .titulo h1{
     margin: 0;
 }
 .botoes button{
-    background-color: #444; /*cor de fundo do botão*/
+    background-color: white; /*cor de fundo do botão*/
     color: #9acd32; /*cor de texto do botão*/
     padding: 10px 20px;
     border: none;
     cursor: pointer;
 }
 .botoes button:hover{
-    background-color: #555; /*cor de fundo do botão ao passar o mouse*/
+    background-color: black; /*cor de fundo do botão ao passar o mouse*/
 }
