--- a/Menu Principal/style.css
+++ b/Menu Principal/style.css
@@ -27,3 +27,8 @@ header{
 .titulo{
     color: blue;
 }
+.Primeira-Parte{
+    align-items: center;
+    padding: 20px 30px;
+    background-color: blue;
+}
